--- a/test/test.styles.css
+++ b/test/test.styles.css
@@ -1,7 +1,18 @@
 #mocha .test a.replay {
-    display: none;
+  display: none;
 }
 
 #mocha h1 a {
-    pointer-events: none;
+  pointer-events: none;
+}
+
+header {
+  background-color: grey;
+}
+h2 {
+    background-color: cornflowerblue;
+}
+h3 {
+    background-color: ghostwhite;
+    color: blue;
 }
